# OpalLang

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  language.ebnf
.github/: PULL_REQUEST_TEMPLATE.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  codeql.yml  docs.yml
docs/css/: gcov.css
docs/examples/: complete_example.op  data_structures.op  fibonacci.op  file_manager.op  guess_number.op  hello.op  simple_game.op  sorting_algorithms.op  todo_list.op
docs/grammar/: language.ebnf
docs/graph/: grammar_visualization.md
scripts/: benchmark.sh  build.sh  clean.sh  coverage.sh  format_code.sh  fuzzing_test.py  generate_docs.sh  install_deps.sh  run_fuzzing.sh  run_tests.sh  watch.sh
src/: Main.cpp  main.cpp
src/error/: Error.cpp  Error.hpp
src/lexer/: Lexer.cpp  Lexer.hpp  Token.hpp  TokenType.hpp
src/lexer/tokenizer/: TokenizerBase.cpp  TokenizerBase.hpp  TokenizerFactory.cpp  TokenizerFactory.hpp
src/lexer/tokenizer/tokenizers/: CommentTokenizer.cpp  CommentTokenizer.hpp  IdentifierTokenizer.cpp  IdentifierTokenizer.hpp  NumberTokenizer.cpp  NumberTokenizer.hpp  OperatorTokenizer.cpp  OperatorTokenizer.hpp  StringTokenizer.cpp  StringTokenizer.hpp
src/lexer/tokenizers/: CommentTokenizer.cpp  CommentTokenizer.hpp  IdentifierTokenizer.cpp  IdentifierTokenizer.hpp  NumberTokenizer.cpp  NumberTokenizer.hpp  OperatorTokenizer.cpp  OperatorTokenizer.hpp  StringTokenizer.cpp  StringTokenizer.hpp  TokenizerBase.cpp  TokenizerBase.hpp  TokenizerFactory.cpp  TokenizerFactory.hpp
src/parser/: Parser.cpp  Parser.hpp
src/parser/atomizer/: AtomizerBase.cpp  AtomizerBase.hpp  AtomizerFactory.cpp  AtomizerFactory.hpp  VariableType.hpp
src/parser/atomizer/atomizers/: ConditionAtomizer.cpp  ConditionAtomizer.hpp  LoadAtomizer.cpp  LoadAtomizer.hpp  OperationAtomizer.cpp  OperationAtomizer.hpp  StringAtomizer.cpp  StringAtomizer.hpp  VariableAtomizer.cpp  VariableAtomizer.hpp
src/parser/node/: NodeBase.cpp  NodeBase.hpp  NodeFactory.cpp  NodeFactory.hpp
src/parser/node/nodes/: LoadNode.cpp  LoadNode.hpp  OperationNode.cpp  OperationNode.hpp  StringNode.cpp  StringNode.hpp  VariableNode.cpp  VariableNode.hpp
src/repl/: Repl.cpp  Repl.hpp
src/repl/command/: CommandBase.hpp  CommandFactory.cpp  CommandFactory.hpp
src/repl/command/commands/: ClearCommand.hpp  ClearCommnd.cpp  ExitCommand.cpp  ExitCommand.hpp  HelpCommand.cpp  HelpCommand.hpp
src/repl/signal/: ReplSignalManager.cpp  ReplSignalManager.hpp  SignalHandler.cpp  SignalHandler.hpp
src/util/: ErrorUtil.hpp  FileUtil.cpp  FileUtil.hpp
tests/: TestMain.cpp
tests/error/: ErrorTest.cpp
tests/lexer/: LexerEdgeCasesTest.cpp  LexerTest.cpp
tests/parser/: AtomizerTest.cpp  LoadAtomizerTest.cpp
tests/parser/atomizer/atomizers/: StringAtomizerTest.cpp
tests/repl/: CommandFactoryExtendedTest.cpp  CommandFactoryTest.cpp  CommandTest.cpp
tests/util/: FileUtilTest.cpp
